[metadata]
name = django-logging-handlers
version = 0.1.2
description = Log errors easy and hassle-free
long_description = file: README.md
url = https://github.com/LLoyderino/django-logging-handlers
author = Adrijan Bjedov
author_email = adrijan.bjedov@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Framework :: Django
    Intended Audience :: Developers

[options]
include_package_data = true
packages = find:
install_requires =
    Django >= 2
    requests
